--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@modules/app-menu": "file:./modules/app-menu/",
     "@modules/articles": "file:./modules/articles/",
     "@modules/login": "file:./modules/login/",
+    "@modules/privacy-policy": "file:./modules/privacy-policy",
     "@modules/social-login": "file:./modules/social-login/",
     "@modules/splash": "file:./modules/splash/",
     "@modules/user-profile": "file:./modules/user-profile/",
